imagenes y estilo principal

--- a/web/webroot/theme53322/main-style.css
+++ b/web/webroot/theme53322/main-style.css
@@ -3012,7 +3012,7 @@ div.type-page h4 { margin:0 0 30px; }
 }
 .service-box.features .service-box_body .title a { color:inherit; }
 .service-box.features .service-box_body .title a:hover {
-	color:#62abdb;
+	color:#bc1844;
 	text-decoration:none;
 }
 .service-box.features .service-box_body .title a:active, .service-box.features .service-box_body .title a:focus { text-decoration:none; }
